--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "bootstrap": "^5.3.3",
     "firebase": "^10.11.0",
+    "ngx-bootstrap": "^12.0.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.10.8",
     "tslib": "^2.3.0",
